Fix immutability issue in audit.listSystemsByPatchStatus (bsc#1235908)
Stream.toList() creates immutable lists, which causes an exception when
sorting the list in the API handler